# Sandbox-roundtable

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: roundtable.example.yaml
launcher_sources/: common.py  demo_request_launcher.py  run_desktop_smoke_launcher.py  run_tests_launcher.py  setup_launcher.py  start_api_launcher.py  start_desktop_launcher.py
sandbox/: main.py  skill_loader.py
sandbox/agents/: base.py  member.py
sandbox/api/: routes.py
sandbox/application/: __init__.py  workbench_service.py
sandbox/clients/: aihubmix_client.py
sandbox/core/: config.py  roundtable_config.py  roundtable_engine.py  service_container.py
sandbox/desktop/: __init__.py  __main__.py  design_tokens.py  main.py  main_window.py  state.py  theme.py
sandbox/desktop/pages/: __init__.py  new_discussion_page.py  (+4 more)
sandbox/engines/: __init__.py  judge.py  moderator.py
sandbox/renderers/: markdown.py  session_export.py
sandbox/schemas/: __init__.py  config.py  discussion.py  skill.py  usage.py
sandbox/storage/: session_store.py
scripts/: build-launchers.ps1  demo-request.ps1  run-desktop-smoke.ps1  run-tests.ps1  setup.ps1  start-api.ps1  start-desktop.ps1
skills/: placeholder_alpha.md  placeholder_beta.yaml  placeholder_gamma.json  skill_template.md
skills/guderian-perspective/: SKILL.md
skills/syrskyi-perspective/: SKILL.md
skills/yang-zhibin-perspective/: SKILL.md
tests/: test_aihubmix_client.py  test_api.py  test_desktop_real_boot.py  test_desktop_smoke.py  test_roundtable_engine.py  test_skill_loader.py  test_workbench_service.py
(+23 files in other folders)
